mysql-server/mysql-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-alias: mysql.local.com
  labels:
    app: mysql
  name: mysql

spec:
  rules:
  - host: mysql.local.com
    http:
      paths:
      - backend:
          serviceName: mysql
          servicePort: 3306
        path: /
